--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "NODE_OPTIONS='--openssl-legacy-provider --inspect' next build",
+    "start": "NODE_OPTIONS='--openssl-legacy-provider --inspect' next start",
     "lint": "next lint"
   },
   "dependencies": {
